--- a/PrettyWeather/PrettyWeather.Android/Properties/AndroidManifest.xml
+++ b/PrettyWeather/PrettyWeather.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.prettyweather">
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-    <application android:label="PrettyWeather.Android"></application>
+    <application android:label="PrettyWeather.Android">
+      <activity android:name="com.microsoft.identity.client.BrowserTabActivity">
+        <intent-filter>
+          <action android:name="android.intent.action.VIEW" />
+
+          <category android:name="android.intent.category.DEFAULT" />
+          <category android:name="android.intent.category.BROWSABLE" />
+
+          <data
+              android:host="auth"
+              android:scheme="msal" />
+        </intent-filter>
+      </activity>
+    </application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
