--- a/PrettyWeather/PrettyWeather.iOS/PrettyWeather.iOS.csproj
+++ b/PrettyWeather/PrettyWeather.iOS/PrettyWeather.iOS.csproj
@@ -120,16 +120,16 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.3.0.778476-pre1" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.0" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2125" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms.PancakeView">
-      <Version>1.2.1-beta</Version>
+      <Version>2.3.0.759</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\PrettyWeather\PrettyWeather.csproj">
-      <Project>{5739A41B-8DAE-44E8-8682-C1695EEB4BF0}</Project>
+      <Project>{4E4FEAE0-8558-41AB-89D2-8D2F2B3B96F7}</Project>
       <Name>PrettyWeather</Name>
     </ProjectReference>
   </ItemGroup>
